@@ -1,22 +1,19 @@
-package dev.stashy.extrasounds.mc1_18.runtime;
+package dev.stashy.extrasounds.mc1_17_1.runtime;
 
+import com.google.common.collect.ImmutableList;
 import dev.stashy.extrasounds.logics.runtime.VersionedClientResource;
 import net.minecraft.resource.AbstractFileResourcePack;
 import net.minecraft.resource.ResourcePack;
 import net.minecraft.resource.ResourceType;
 import net.minecraft.resource.metadata.ResourceMetadataReader;
 import net.minecraft.util.Identifier;
-import org.apache.commons.compress.utils.Lists;
 import org.jetbrains.annotations.Nullable;
 
 import java.io.ByteArrayInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collection;
-import java.util.List;
-import java.util.Objects;
-import java.util.Set;
+import java.util.*;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
 
@@ -44,7 +41,7 @@ public class ClientResource extends VersionedClientResource implements ResourceP
         }
 
         try {
-            final var supplier = Objects.requireNonNull(this.assets.get(id));
+            final Supplier<byte[]> supplier = Objects.requireNonNull(this.assets.get(id));
             return new ByteArrayInputStream(Objects.requireNonNull(supplier.get()));
         } catch (Exception ignored) {
         }
@@ -54,12 +51,12 @@ public class ClientResource extends VersionedClientResource implements ResourceP
     @Override
     public Collection<Identifier> findResources(ResourceType type, String namespace, String prefix, int maxDepth, Predicate<String> pathFilter) {
         if (type != ResourceType.CLIENT_RESOURCES) {
-            return List.of();
+            return ImmutableList.of();
         }
 
-        List<Identifier> result = Lists.newArrayList();
-        for (var id : this.assets.keySet()) {
-            var supplier = this.assets.get(id);
+        List<Identifier> result = new ArrayList<>();
+        for (Identifier id : this.assets.keySet()) {
+            Supplier<byte[]> supplier = this.assets.get(id);
             if (supplier == null) {
                 continue;
             }
@@ -75,8 +72,8 @@ public class ClientResource extends VersionedClientResource implements ResourceP
         if (type != ResourceType.CLIENT_RESOURCES) {
             return false;
         }
-        for (var key : this.assets.keySet()) {
-            var supplier = this.assets.get(key);
+        for (Identifier key : this.assets.keySet()) {
+            Supplier<byte[]> supplier = this.assets.get(key);
             if (supplier == null) {
                 continue;
             }
@@ -96,7 +93,7 @@ public class ClientResource extends VersionedClientResource implements ResourceP
     @Override
     public <T> T parseMetadata(ResourceMetadataReader<T> metaReader) throws IOException {
         try {
-            var stream = Objects.requireNonNull(this.openRootImpl("pack.mcmeta")).get();
+            InputStream stream = Objects.requireNonNull(this.openRootImpl("pack.mcmeta")).get();
             return AbstractFileResourcePack.parseMetadata(metaReader, Objects.requireNonNull(stream));
         } catch (Exception ignored) {
             if (metaReader.getKey().equals("pack")) {
